@@ -11,6 +11,9 @@ import javax.swing.UIManager;
 import javax.swing.filechooser.FileSystemView;
 import javax.swing.filechooser.FileView;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 /**
  * Fallback implementation of a FileSystemView.
  * <p>
@@ -39,6 +42,7 @@ import javax.swing.filechooser.FileView;
  * 
  */
 public class RestrictedFileSystemView extends FileSystemView {
+	private static final Logger LOGGER = LoggerFactory.getLogger(RestrictedFileSystemView.class);
 	private static final String newFolderString = UIManager.getString("FileChooser.other.newFolder");
 	private File _defaultDirectory;
 
@@ -297,7 +301,7 @@ public class RestrictedFileSystemView extends FileSystemView {
 			}
 		}
 
-		return (File[]) files.toArray(new File[files.size()]);
+		return files.toArray(new File[files.size()]);
 	}
 
 	/**
@@ -371,14 +375,16 @@ public class RestrictedFileSystemView extends FileSystemView {
 		int i = 2;
 		while (newFolder.exists() && (i < 100)) {
 			newFolder = createFileObject(containingDir, MessageFormat.format(newFolderString,
-				new Object[]{new Integer(i)}));
+				new Object[] { Integer.valueOf(i) }));
 			i++;
 		}
 
 		if (newFolder.exists()) {
 			throw new IOException("Directory already exists:" + newFolder.getAbsolutePath());
 		} else {
-			newFolder.mkdirs();
+			if (!newFolder.mkdirs()) {
+				LOGGER.debug("Could not create directory \"" + newFolder.getAbsolutePath() + "\"");
+			}
 		}
 
 		return newFolder;
